--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
             font-weight: 600;
         }
         .main .code-content {
+            box-sizing: border-box;
             display: block;
             left: 0;
             right: 0;
