--- a/index.html
+++ b/index.html
@@ -100,6 +100,9 @@
             border-radius: 3px;
             padding: 2px;
         }
+        #mangled-symbol {
+            cursor: pointer;
+        }
         </style>
     </head>
     <body>
@@ -123,6 +126,10 @@
         <script src="js/demangle.js"></script>
         <script src="js/vendor/jquery-3.2.1.min.js"></script>
         <script>
+            $("#mangled-symbol").on('click', function() {
+                $('#text-view').val($(this).html()).trigger('input');
+            });
+
             var pattern = /(?:_T|_\$S|\$S)[^\s]+/g;
 
             $('#text-view').on('input', function() {
