--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset="utf-8">
         <title>Swift Demangler</title>
         <meta name="description" content="Swift Demangler allows you to demangle Swift symbols in the browser">
-        <meta name="keywords" content="Swift,Demangle,Objective-C,Mangled,Debugging,Crash,Report">
+        <meta name="keywords" content="Swift,Demangle,Demangling,Tool,Objective-C,Mangled,Debugging,Crash,Report">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
         <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -116,7 +116,7 @@
         </div>
         <footer>
             <div class="centered-content">
-                <p>Based on <a href="https://github.com/apple/swift/blob/master/lib/Demangling/Demangler.cpp">Demangler.cpp</a> and <a href="https://github.com/kripken/emscripten">Emscripten</a></p>
+                <p>Based on <a href="https://github.com/apple/swift/blob/master/lib/Demangling/Demangler.cpp">Demangler.cpp</a> using <a href="https://github.com/kripken/emscripten">Emscripten</a></p>
                 <p>Made in Paris with <span style="opacity: 0.8;">❤️ </span></p>
             </div>
         </footer>
