Update demangle script to Swift 4.2.1, and update index.html to reflect that

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Swift Demangler</title>
-        <meta name="description" content="Swift Demangler allows you to demangle Swift symbols in the browser">
+        <meta name="description" content="Swift Demangler allows you to demangle Swift symbols in the browser.">
         <meta name="keywords" content="Swift,Demangle,Demangling,Tool,Objective-C,Mangled,Debugging,Crash,Report">
         <meta name="viewport" content="width=device-width, initial-scale=1">
 
@@ -108,7 +108,7 @@
     <body>
         <div class="main centered-content">
             <h1>Swift Demangler</h1>
-            <p class="description">Swift Demangler translates cryptic Swift symbols (<i>e.g.</i> <code class="inline-code" id="mangled-symbol">_TtP3foo3bar_</code>) into a human-readable form (<i>e.g.</i> <code class="inline-code">foo.bar</code>)
+            <p class="description">Swift Demangler translates cryptic Swift 4.2.1 symbols (<i>e.g.</i> <code class="inline-code" id="mangled-symbol">_TtP3foo3bar_</code>) into a human-readable form (<i>e.g.</i> <code class="inline-code">foo.bar</code>)
             </p>
             <textarea id="text-view" class="code-content" placeholder="Insert mangled Swift symbols here (e.g. from a crash report)..."></textarea>
             <h3 id="demangled-output-label">Demangled Output:</h3>
