Add 'Having issues?' support contact

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
         <footer>
             <div class="centered-content">
                 <p>Based on <a href="https://github.com/apple/swift/blob/master/lib/Demangling/Demangler.cpp">Demangler.cpp</a> using <a href="https://github.com/kripken/emscripten">Emscripten</a></p>
-                <p>Made in Paris with <span style="opacity: 0.8;">❤️ </span></p>
+                <p>Having issues? <a href="mailto:support@swiftdemangler.com?Subject=Swift Demangler support request" target="_top">We can help</a></p>
             </div>
         </footer>
 
